hphp/hack/test/typecheck/reactive/await_in_rx1.php.exp
File "await_in_rx1.php", line 11, characters 8-10:
This value has Awaitable type. Awaitable typed values in reactive code must be immediately await'ed. (Typing[4248])
