hphp/hack/test/typecheck/reactive/await_in_rx1.php
<?hh // strict

<<__Rx>>
async function f(): Awaitable<int> {
  return 1;
}

<<__Rx>>
async function g(): Awaitable<void> {
  // error
  $a = f();
  $b = await $a;
}
